--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.54.2",
-    "@types/node": "^24.2.1"
+    "@types/node": "^24.2.1",
+    "zod": "^4.0.17"
   }
 }
