--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,8 @@ RAMP_BASE_URL=https://app.ramp.com
 RAMP_SIGNUP_URL=https://app.ramp.com/sign-up
 RAMP_SIGNIN_URL=https://app.ramp.com/sign-in
 
-# Credenciais de teste (não usar em produção)
+# Credenciais de teste
 TEST_EMAIL=teste@exemplo.com
 TEST_PASSWORD=MinhaSenh@123456
 TEST_FIRST_NAME=João
 TEST_LAST_NAME=Silva
-
-# Configurações de timeout
-DEFAULT_TIMEOUT=5000
-NAVIGATION_TIMEOUT=10000
