--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@playwright/test": "^1.54.2",
     "@types/node": "^24.2.1",
+    "dotenv": "^17.2.1",
     "zod": "^4.0.17"
   }
 }
